--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -487,6 +487,9 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+<app-home></app-home>
+
+
 <p>AudioVisuel STORE</p>
 <div class="example-button-container">
   <button mat-fab color="warn" aria-label="Example icon button with a home icon">
