--- a/src/app/products/products/products.component.html
+++ b/src/app/products/products/products.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let product of(products |async)">
-    <img src="{{product.imgUrl}}" alt="">
+    <img src="{{product.imgUrl}}" height="500">
     <br>
     {{product.name}}
 </div>
