--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
-
+/*
   h1,
   h2,
   h3,
@@ -489,7 +489,29 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <!--<app-home></app-home>-->
-<p>AudioVisuel STORE</p>
+
+
+
+
+<header>
+<mat-toolbar color="primary">
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>AudioVisuel STORE</span>
+  <span class="example-spacer"></span>
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <mat-icon>favorite</mat-icon>
+  </button>
+  <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
+    <mat-icon>add_shopping_cart</mat-icon>
+  </button>
+  <a mat-button routerLink="/products" routerLinkActive="active">Les Promotions</a>
+  <a mat-button routerLink="/home" routerLinkActive="active">Mon Compte</a>
+</mat-toolbar>
+</header>
+
+<!--
 <div class="example-button-container">
   <button mat-fab color="warn" aria-label="Example icon button with a home icon">
     <mat-icon>home</mat-icon>
@@ -509,5 +531,5 @@
 
 <button mat-icon-button color="warn" aria-label="Example icon button with a heart icon">
   <mat-icon>favorite</mat-icon>
-</button>
+</button>-->
 <router-outlet></router-outlet>
