--- a/src/app/products/products/products.component.css
+++ b/src/app/products/products/products.component.css
@@ -1,14 +1,20 @@
-.example-card{
-    width: 500px;
-    
-    margin: 2cm;
-    background-color:bisque;
-    
-}
 mat-card img{
     object-fit: cover; /*this makes the image in src fit to the size specified below*/
     width: 100%; 
     height: 80%;
     margin:2px;
   }
- 
+  .example-card {
+    max-width: 400px;
+    margin: 1cm;
+    background-color: bisque;
+  }
+  
+  .example-header-image {
+    /*background-image: url('https://www.mariegalliez.com/wp-content/uploads/2021/01/audiovisuel-980x551.jpg');*/
+    background-size: cover;
+  }
+  #container{
+    display: flexbox;
+    flex-flow: row wrap;
+  }
