--- a/src/app/products/products/products.component.html
+++ b/src/app/products/products/products.component.html
@@ -1,27 +1,33 @@
-
-<div *ngFor="let product of(products |async)">
-    <img src="{{product.imgUrl}}" height="500">
-    <br>
-    {{product.name}}
+<!--<div *ngFor="let product of products | async">
+  <img src="{{ product.imgUrl }}" height="500" />
+  <br />
+  {{ product.name }}
 </div>
-<br>
+<br />
+-->
 
-<mat-card class="example-card" *ngFor="let product of(products |async)">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"><img src="{{product.imgUrl}}" alt=""></div>
-      <mat-card-title>{{product.name}}</mat-card-title>
-      <mat-card-subtitle>{{product.price}} DT</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="{{product.imgUrl}}" alt="Photo of a Shiba Inu" >
-    <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions>
-  </mat-card>
+<mat-card class="example-card" *ngFor="let product of products | async">
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image">
+      <!--<img src="{{product.imgUrl}}" alt="">--><img
+        mat-card-image
+        src="{{ product.imgUrl }}"
+        alt="Photo of a Shiba Inu"
+      />
+    </div>
+    <mat-card-title>{{ product.name }}</mat-card-title>
+    <mat-card-subtitle>{{ product.price }} DT</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="{{ product.imgUrl }}" alt="Photo of a Shiba Inu" />
+  <mat-card-content>
+    <p>
+      The Shiba Inu is the smallest of the six original and distinct spitz
+      breeds of dog from Japan. A small, agile dog that copes very well with
+      mountainous terrain, the Shiba Inu was originally bred for hunting.
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>LIKE</button>
+    <button mat-button>PANIER</button>
+  </mat-card-actions>
+</mat-card>
