--- a/src/app/products/products/products.component.html
+++ b/src/app/products/products/products.component.html
@@ -6,7 +6,8 @@
 <br />
 -->
 
-<mat-card class="example-card" *ngFor="let product of products | async">
+
+<mat-card class="example-card" *ngFor="let product of products | async" color="primary">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image">
       <!--<img src="{{product.imgUrl}}" alt="">--><img
