--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -507,7 +507,7 @@
     <mat-icon>add_shopping_cart</mat-icon>
   </button>
   <a mat-button routerLink="/products" routerLinkActive="active">Les Promotions</a>
-  <a mat-button routerLink="/home" routerLinkActive="active">Mon Compte</a>
+  <a mat-button routerLink="/login" routerLinkActive="active">Mon Compte</a>
 </mat-toolbar>
 </header>
 
