--- a/src/app/products/products/products.component.css
+++ b/src/app/products/products/products.component.css
@@ -7,7 +7,7 @@ mat-card img{
   .example-card {
     max-width: 400px;
     margin: 1cm;
-    background-color:#3330E4;
+    background-color:bisque;
   }
   
   .example-header-image {
