--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -495,14 +495,14 @@
 
 <header>
 <mat-toolbar color="primary">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+  <!--<button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
-  </button>
+  </button>-->
   <span>AudioVisuel STORE</span>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+  <!--<button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
     <mat-icon>favorite</mat-icon>
-  </button>
+  </button>-->
   <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
     <mat-icon>add_shopping_cart</mat-icon>
   </button>
