--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -61,9 +61,11 @@
     </div>
 
   </mat-card-content>
+
   <mat-card-actions align="end">
     <button mat-button>S'inscrire</button>
   </mat-card-actions>
+
 </mat-card>
 
 
@@ -100,7 +102,6 @@
 
   </mat-card-content>
   <mat-card-actions align="end">
-    <button mat-button>Se connecter</button>
+    <button mat-button (click)="login()">Se connecter</button>
   </mat-card-actions>
 </mat-card>
-
