--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -498,7 +498,7 @@
   <!--<button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>-->
-  <span>AudioVisuel STORE</span>
+  <span> <a [routerLink]="['/home']" id="link"> AudioVisuel STORE</a></span>
   <span class="example-spacer"></span>
   <!--<button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
     <mat-icon>favorite</mat-icon>
