--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -30,7 +30,7 @@
   .login-card{
     width: 500px;
     margin: 7% auto;/*in the center*/
-    background-color: antiquewhite;
+   /* background-color: antiquewhite;*/
   }
 
 
