--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -49,7 +49,7 @@
       <form class="example-form">
         <mat-form-field class="example-full-width" appearance="fill">
           <mat-label>Email</mat-label>
-          <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
+          <input type="email" matInput formControlName="emailFormControl" [errorStateMatcher]="matcher"
             placeholder="Ex. pat@example.com" />
           <mat-hint>Errors appear instantly!</mat-hint>
           <mat-error *ngIf="
@@ -68,6 +68,16 @@
         <mat-form-field class="example-full-width" appearance="fill">
           <mat-label>Enter your password</mat-label>
           <input matInput [type]="hide ? 'password' : 'text'" formControlName="password"/>
+          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+            [attr.aria-pressed]="hide">
+            <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+          </button>
+        </mat-form-field>
+      </div>
+      <div class="example-container">
+        <mat-form-field class="example-full-width" appearance="fill">
+          <mat-label>Repeat your password</mat-label>
+          <input matInput [type]="hide ? 'password' : 'text'" formControlName="repeatpwd"/>
           <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
             [attr.aria-pressed]="hide">
             <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
