--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -515,7 +515,9 @@
       </a>
       <mat-menu #menu="matMenu">
         <button mat-menu-item (click)="logout()">Se deconnecter</button>
+        <button mat-menu-item (click)="myacount()">Mon Compte</button>
       </mat-menu>
+      
     </div>
   </mat-toolbar>
 </header>
