--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -49,7 +49,7 @@
       <form class="example-form">
         <mat-form-field class="example-full-width" appearance="fill">
           <mat-label>Email</mat-label>
-          <input type="email" matInput formControlName="emailFormControl" [errorStateMatcher]="matcher"
+          <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
             placeholder="Ex. pat@example.com" />
           <mat-hint>Errors appear instantly!</mat-hint>
           <mat-error *ngIf="
@@ -82,6 +82,10 @@
             [attr.aria-pressed]="hide">
             <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
           </button>
+          <mat-hint>Errors appear instantly!</mat-hint>
+          <mat-error *ngIf="repeatpwd.invalid && repeatpwd.hasError('passwordMatch')">
+            verify password not match
+          </mat-error>
         </mat-form-field>
       </div>
     </form>
@@ -89,5 +93,7 @@
 
   <mat-card-actions align="end">
     <button mat-button (click)="register()">S'inscrire</button>
+    <span>Already have an acount? </span> <br>
+    <a [routerLink]="['/login']">Connect here</a>
   </mat-card-actions>
 </mat-card>
