--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -507,7 +507,7 @@
     <button mat-icon-button aria-label="Example icon button with a vertical three dot icon">
       <mat-icon>add_shopping_cart</mat-icon>
     </button>
-    <a mat-button routerLink="/products" routerLinkActive="active">Les Promotions</a>
+    <a mat-button routerLink="/products" routerLinkActive="active">Les Produits</a>
     <a *ngIf="!user" mat-button routerLink="/login" routerLinkActive="active">Se connecter</a>
     <div>
       <a *ngIf="user" [matMenuTriggerFor]="menu"mat-button>
