--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -18,3 +18,21 @@
   display: flexbox;
   flex-flow: row wrap;
 }*/
+.example-container {
+  width: 100%;
+  height: 100%;
+  /*margin: 10px;
+  /*border: 1px solid #555;*/
+}
+.but{
+  width: 100%;
+  height: 50px;
+  
+  margin-top: 50px;
+  
+  
+}
+a{
+  text-decoration: none;
+  
+}
