--- a/src/app/products/products/products.component.html
+++ b/src/app/products/products/products.component.html
@@ -1,25 +1,31 @@
-<mat-card class="example-card" *ngFor="let product of products | async" >
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image">
-      <!--<img src="{{product.imgUrl}}" alt="">--><img
-        mat-card-image
-        src="{{ product.imgUrl }}"
-        alt="Photo of a Shiba Inu"
-      />
-    </div>
-    <mat-card-title>{{ product.name }}</mat-card-title>
-    <mat-card-subtitle>{{ product.price }} DT</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="{{ product.imgUrl }}" alt="Photo of a Shiba Inu" />
-  <mat-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz
-      breeds of dog from Japan. A small, agile dog that copes very well with
-      mountainous terrain, the Shiba Inu was originally bred for hunting.
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>PANIER</button>
-  </mat-card-actions>
-</mat-card>
+<mat-grid-list cols="3" rowHeight="600px">
+  <mat-grid-tile class="example-card" *ngFor="let product of products | async">
+    <mat-card   >
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image">
+          <!--<img src="{{product.imgUrl}}" alt="">--><img
+            mat-card-image
+            src="{{ product.imgUrl }}"
+            alt="Photo of a Shiba Inu"
+          />
+        </div>
+        <mat-card-title>{{ product.name }}</mat-card-title>
+        <mat-card-subtitle>{{ product.price }} DT</mat-card-subtitle>
+      </mat-card-header>
+      <img mat-card-image src="{{ product.imgUrl }}" alt="Photo of a Shiba Inu" />
+      <mat-card-content>
+        <p>
+          The Shiba Inu is the smallest of the six original and distinct spitz
+          breeds of dog from Japan. A small, agile dog that copes very well with
+          mountainous terrain, the Shiba Inu was originally bred for hunting.
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>PANIER</button>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
+
+
