--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
     <form class="example-form">
       <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Email</mat-label>
-        <input type="email" matInput placeholder="Ex. pat@example.com" name="email" [(ngModel)]="email">
+        <input type="email" matInput placeholder="Ex. pat@example.com" name="emailFormControl" [(ngModel)]="emailFormControl">
         <mat-hint>Errors appear instantly!</mat-hint>
       </mat-form-field>
     </form>
