--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,10 +19,10 @@
 </mat-card>-->
 <mat-drawer-container class="example-container" >
   <mat-drawer mode="side" opened style="background-color: #E7F6F2; width: 17%;" >
-    <button mat-button  color="primary" class="but" ><a href="">Produit</a> </button><br>
+    <button mat-button  color="primary" class="but" ><a >Produit</a> </button><br>
     <button mat-button color="primary" class="but" ><a href="">Client</a> </button><br>
-    <button mat-button color="primary" class="but" ><a href="">Promotion</a> </button><br>
-    <button mat-button color="primary" class="but" ><a [routerLink]="['/register']">Fournisseur</a> </button><br>
+    <button mat-button color="primary" class="but" ><a [routerLink]="['/Promotion']">Promotion</a> </button><br>
+    <button mat-button color="primary" class="but" ><a [routerLink]="['/Fournisseur']">Fournisseur</a> </button><br>
   </mat-drawer>
   <mat-drawer-content>
     Home work!!
