--- a/src/app/promotion/promotion.component.html
+++ b/src/app/promotion/promotion.component.html
@@ -1,4 +1,9 @@
-
+<div class="container"> <br><br><br>
+  <div class="box-nav d-flex justify-between"> 
+      <a [routerLink]="['/createUpdatePromo']" class="border-shadow">
+          <span class="text-gradient">Nouveau Promotion <i class="fas fa-user"></i></span>
+      </a>
+  </div><br><br>
 
 
 <mat-form-field appearance="standard">
