--- a/src/app/create-update-promo/create-update-promo.component.html
+++ b/src/app/create-update-promo/create-update-promo.component.html
@@ -1,4 +1,4 @@
-<mat-card class="login-card">
+<mat-card class="login-card" *ngIf="!promo">
     <mat-card-header>
         <mat-card-title>Nouvelle promotion</mat-card-title>
     </mat-card-header>
@@ -6,36 +6,79 @@
         <form [formGroup]="promoForm">
             <table class="example-full-width" cellspacing="0">
                 <tr>
-            <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>code promo</mat-label>
-                <input formControlName="codePromo" matInput />
-            </mat-form-field>
-</tr>
-<tr>
-            <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>pourcentage</mat-label>
-                <input formControlName="pourcentage" matInput />
-            </mat-form-field>
-        </tr>
-        <tr>
-            <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>date debut</mat-label>
-                <input formControlName="beginDate" matInput />
-            </mat-form-field>
-        </tr>
-        <tr>
-            <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>date fin</mat-label>
-                <input formControlName="endDate" matInput />
-            </mat-form-field>
-        </tr>
-        </table>
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <mat-label>code promo</mat-label>
+                        <input formControlName="codePromo" matInput  />
+                    </mat-form-field>
+                </tr>
+                <tr>
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <mat-label>pourcentage</mat-label>
+                        <input formControlName="pourcentage" matInput  />
+                    </mat-form-field>
+                </tr>
+                <tr>
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <mat-label>date debut</mat-label>
+                        <input formControlName="beginDate" matInput  />
+                    </mat-form-field>
+                </tr>
+                <tr>
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <mat-label>date fin</mat-label>
+                        <input formControlName="endDate" matInput  />
+                    </mat-form-field>
+                </tr>
+            </table>
 
 
         </form>
         <mat-card-actions align="end">
             <button mat-button (click)="create()">Enregistrer</button>
-          </mat-card-actions>
-        </mat-card-content>
-        </mat-card>
-        
+     
+        </mat-card-actions>
+    </mat-card-content>
+</mat-card>
+
+
+
+<mat-card class="login-card" *ngIf="promo">
+    <mat-card-header>
+        <mat-card-title>Nouvelle promotion</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <form [formGroup]="promoForm">
+            <table class="example-full-width" cellspacing="0">
+                <tr>
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <mat-label>code promo</mat-label>
+                        <input formControlName="codePromo" matInput [(ngModel)]="promo.codePromo" />
+                    </mat-form-field>
+                </tr>
+                <tr>
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <mat-label>pourcentage</mat-label>
+                        <input formControlName="pourcentage" matInput [(ngModel)]="promo.pourcentage" />
+                    </mat-form-field>
+                </tr>
+                <tr>
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <mat-label>date debut</mat-label>
+                        <input formControlName="beginDate" matInput [(ngModel)]="promo.beginDate" />
+                    </mat-form-field>
+                </tr>
+                <tr>
+                    <mat-form-field class="example-full-width" appearance="fill">
+                        <mat-label>date fin</mat-label>
+                        <input formControlName="endDate" matInput [(ngModel)]="promo.endDate" />
+                    </mat-form-field>
+                </tr>
+            </table>
+
+
+        </form>
+        <mat-card-actions align="end">
+            <button mat-button (click)="update()">Modifier</button>
+        </mat-card-actions>
+    </mat-card-content>
+</mat-card>
