--- a/src/app/promotion/promotion.component.html
+++ b/src/app/promotion/promotion.component.html
@@ -12,18 +12,12 @@
 
 
 
-
-
-
-
-
-
-
 <div class="container"> <br><br><br>
   <div class="box-nav d-flex justify-between"> 
-      <a [routerLink]="['/createUpdatePromo']" class="border-shadow">
-          <span class="text-gradient">Nouveau Promotion <i class="fas fa-user"></i></span>
-      </a>
+      
+        <button mat-button (click)="create()">Nouvelle Promotion</button>
+          
+      
   </div><br><br>
 
 
