--- a/src/app/fournisseur/fournisseur.component.html
+++ b/src/app/fournisseur/fournisseur.component.html
@@ -1,101 +1,36 @@
-<header id="header">
-    <nav>
-        <div class="container">
-            <div class="text-center">
-                <a href="/" class="nav-brand text-dark">Fournisseurs</a>
-            </div>
-        </div>
-    </nav>
-</header>
-
-
-<!--<% for(var i = 0; i < users.length; i++) { %>
-    <tr>
-        <td><%= i + 1 %></td>
-        <td><%= users[i].name %></td>
-        <td><%= users[i].email %></td>
-        <td><%= users[i].gender %></td>
-        <td><%= users[i].status %></td>
-        <td>
-            <a href="/update-user?id=<%= users[i]._id%>" class="btn border-shadow update">
-                <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
-            </a>
-            <a class="btn border-shadow delete" data-id=<%= users[i]._id%> >
-                <span class="text-gradient"><i class="fas fa-times"></i></span>
-            </a>
-        </td>
-    </tr>
-    <% } %>-->
-
-
-    <div class="container"> <br><br><br>
-        <div class="box-nav d-flex justify-between"> 
-            <a href="/add-user" class="border-shadow">
-                <span class="text-gradient">Nouveau Fournisseur <i class="fas fa-user"></i></span>
-            </a>
-        </div><br><br>
-
-        <!-- form handling -->
-        <form action="/" method="POST">
-            <table class="table">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>@Email</th>
-                        <th>Gender</th>
-                        <th>Status</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    
-                </tbody>
-            </table>
-        </form>
+<div class="container"> <br><br><br>
+    <div class="box-nav d-flex justify-between"> 
+        
+          <button mat-button (click)="create()">Nouveau fournisseur</button>
+            
+        
+    </div><br><br>
+  
+  
+  
+    <div class="card">
+    <div class="card-body">
+      <h4 class="card-title">Les fournisseurs</h4>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>Email</th>
+            <th>Nom</th>
+            <th>Prenom</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let fournisseur of fournis">
+            <td>{{fournisseur.emailFormControl}}</td>
+            <td>{{fournisseur.firstname}}</td>
+            <td>{{fournisseur.lastname}}</td>
+            <td><button mat-button (click)="update(fournisseur)">Modifier</button></td>
+            <td><button mat-button (click)="delete(fournisseur)">Supprimer</button></td>
+          </tr>
+        </tbody>
+  
+      </table>
+  
     </div>
-
-
-<form action="/api/users" method="POST" id="add_user">
-    <div class="new_user">
-        <div class="form-group">
-            <label for="name" class="text-light">Name</label>
-            <input type="hidden" name="id" value="">
-            <input type="text" name="name" value="" placeholder="Mark Stoenis">
-        </div>
-        <div class="form-group">
-            <label for="Email" class="text-light">Email</label>
-            <input type="text" name="email" value="" placeholder="example@gmail.com">
-        </div>
-        <div class="form-group">
-            <label for="gender" class="text-light">Gender</label>
-            <div class="radio inline">
-                <input type="radio" id="radio-2" name="gender" value="Male" >
-                <label for="radio-2" class="radio-label">Male</label>
-            </div>
-            <div class="radio inline">
-                <input type="radio" id="radio-3" name="gender" value="Female" >
-                <label for="radio-3" class="radio-label">Female</label>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="gender" class="text-light">Status</label>
-            <div class="radio inline">
-                <input type="radio" id="radio-4" name="status" value="Active" >
-                <label for="radio-4" class="radio-label">Active</label>
-            </div>
-            <div class="radio inline">
-                <input type="radio" id="radio-5" name="status" value="Inactive" >
-                <label for="radio-5" class="radio-label">Inactive</label>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <button type="submit" class="btn text-dark update">Save</button>
-        </div>
-
-    </div>
-</form>
-
-
+  
+  </div>
