--- a/src/app/fournisseur/fournisseur.component.html
+++ b/src/app/fournisseur/fournisseur.component.html
@@ -1,31 +1,28 @@
 <div class="container"> <br><br><br>
     <div class="box-nav d-flex justify-between"> 
-        
-          <button mat-button (click)="create()">Nouveau fournisseur</button>
-            
-        
+          <button mat-raised-button color="accent" (click)="create()" style="padding:7px ;">Nouveau fournisseur </button>       
     </div><br><br>
-  
-  
   
     <div class="card">
     <div class="card-body">
-      <h4 class="card-title">Les fournisseurs</h4>
+      <h4 class="card-title" style="font-family: Lucida Handwriting; color: blue;padding-left: 25px;">Les fournisseurs</h4>
       <table class="table table-hover">
         <thead>
           <tr>
             <th>Email</th>
             <th>Nom</th>
             <th>Prenom</th>
+            <th></th>
+            <th></th>
           </tr>
         </thead>
-        <tbody>
+        <tbody >
           <tr *ngFor="let fournisseur of fournis">
             <td>{{fournisseur.emailFormControl}}</td>
             <td>{{fournisseur.firstname}}</td>
             <td>{{fournisseur.lastname}}</td>
-            <td><button mat-button (click)="update(fournisseur)">Modifier</button></td>
-            <td><button mat-button (click)="delete(fournisseur)">Supprimer</button></td>
+            <td><button mat-raised-button color="primary" (click)="update(fournisseur)">Modifier</button></td>
+            <td><button mat-raised-button color="warn" (click)="delete(fournisseur)">Supprimer</button></td>
           </tr>
         </tbody>
   
