--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,30 +1,1 @@
-<!--<mat-card class="example-card">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Shiba Inu</mat-card-title>
-    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-  </mat-card-header>
-  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-  <mat-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
-  </mat-card-actions>
-</mat-card>-->
-<mat-drawer-container class="example-container" >
-  <mat-drawer mode="side" opened style="background-color: #E7F6F2; width: 17%;" >
-    <button mat-button  color="primary" class="but" ><a >Produit</a> </button><br>
-    <button mat-button color="primary" class="but" ><a href="">Client</a> </button><br>
-    <button mat-button color="primary" class="but" ><a [routerLink]="['/Promotion']">Promotion</a> </button><br>
-    <button mat-button color="primary" class="but" ><a [routerLink]="['/Fournisseur']">Fournisseur</a> </button><br>
-  </mat-drawer>
-  <mat-drawer-content>
-    Home work!!
-  </mat-drawer-content>
-</mat-drawer-container>
+<p>Home work !!</p>
