--- a/src/app/produit/produit.component.css
+++ b/src/app/produit/produit.component.css
@@ -1,30 +1,29 @@
 table {
     width: 100%;
-   
   }
-  .card{background-color: #FFFFFF;
-  padding: 20px;
-  
-}
   .mat-form-field {
     font-size: 14px;
     width: 100%;
+  }
+  .card{background-color: #FFFFFF;
+    padding: 20px;
+    
   }
   
   td, th {
     width: 25%;
     background-color: #E7F6F2;
     padding: 15px;
-   
-  }  
+  }
+  
   td {
     padding-right: 8px;
+  }
+  
+  :host.example-floating .example-tel-input-spacer {
+    opacity: 1;
+  }
 
-    
-  }
-  th{
-   
-  }
 
 /*card*/
   .login-card{
@@ -33,12 +32,6 @@ table {
     margin: 7% auto;/*in the center*/
    /* background-color: antiquewhite;*/
   }
-
-  #card-title{
-    background-color: #06d6a0;
-    padding: 1em 0;
-    width: 100%;
-}
 
 
 
@@ -160,6 +153,14 @@ a {
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+#header nav{
+    background-color: #06d6a0;
+    padding: 1em 0;
+    width: 100%;
+}
+
+
 /*  add user & update user template */
 .form-title{
     margin-top: 2em;
