--- a/src/app/promotion/promotion.component.css
+++ b/src/app/promotion/promotion.component.css
@@ -5,36 +5,21 @@ table {
     font-size: 14px;
     width: 100%;
   }
+  .card{background-color: #FFFFFF;
+    padding: 20px;
+    
+  }
   
   td, th {
     width: 25%;
+    background-color: #E7F6F2;
+    padding: 15px;
   }
-
-
-
   
   td {
     padding-right: 8px;
   }
 
-  .example-tel-input-container {
-    display: flex;
-  }
-  
-  .example-tel-input-element {
-    border: none;
-    background: none;
-    padding: 0;
-    outline: none;
-    font: inherit;
-    text-align: center;
-  }
-  
-  .example-tel-input-spacer {
-    opacity: 0;
-    transition: opacity 200ms;
-  }
-  
   :host.example-floating .example-tel-input-spacer {
     opacity: 1;
   }
