--- a/src/app/fournisseur/fournisseur.component.html
+++ b/src/app/fournisseur/fournisseur.component.html
@@ -21,8 +21,8 @@
             <td>{{fournisseur.emailFormControl}}</td>
             <td>{{fournisseur.firstname}}</td>
             <td>{{fournisseur.lastname}}</td>
-            <td><button mat-raised-button color="primary" (click)="update(fournisseur)">Modifier</button></td>
-            <td><button mat-raised-button color="warn" (click)="delete(fournisseur)">Supprimer</button></td>
+            <td><button mat-raised-button color="primary" (click)="update(fournisseur)" style="margin:5px">Modifier</button>
+            <button mat-raised-button color="warn" (click)="delete(fournisseur)" style="margin:5px">Supprimer</button></td>
           </tr>
         </tbody>
   
