--- a/src/app/promotion/promotion.component.html
+++ b/src/app/promotion/promotion.component.html
@@ -22,8 +22,8 @@
           <td>{{promotion.pourcentage}}</td>
           <td>{{promotion.beginDate}}</td>
           <td>{{promotion.endDate}}</td>
-          <td><button mat-raised-button color="primary" (click)="update(promotion)">Modifier</button></td>
-          <td><button mat-raised-button color="warn" (click)="delete(promotion)">Supprimer</button></td>
+          <td><button mat-raised-button color="primary" (click)="update(promotion)" style="margin:5px">Modifier</button>
+          <button mat-raised-button color="warn" (click)="delete(promotion)" style="margin:5px">Supprimer</button></td>
           
         </tr>
       </tbody>
